styling fix - white gap in the heading section

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -185,3 +185,7 @@
 .home .bg-image.bg-image--landing {
   background-position: top center !important;
 }
+
+#bootstrap_iso .clip-bottom-concave--right.white::after {
+  background-position-y: -1px;
+}
